# vivaldi-workspace-desktop-mover

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: dev_run.ps1
src/vivaldi_workspace_desktop_mover/: __main__.py  cli.py  config.py  move.py  virtual_desktop.py  vivaldi_window.py
